styles/app.css
/* ... */
@media (max-width: 730px) {

    .header-nav {
        display: none;
    }

    .header-avatar {
        display: none;
    }

    .menu-toggle {
        display: block;
        background: none;
        font-size: 32px;
        cursor: pointer;
    }
}

@media (max-width: 592px) {

    .articles-title {
        font-size: 40px;
    }
}

@media (max-width: 536px) {

    .container {
        max-width: 500px;
    }

    .articles-grid {
        grid-template-columns: 1fr;
    }

    .newsletter__content {
        flex-direction: column;
    }
}

@media (max-width: 412px) {

    .hero-content {
        max-width: 100%;
        padding: 80px 0 60px;
        position: relative;
        z-index: 1;
    }

    .hero-title {
        font-size: 42px;
        line-height: 50px;
    }

    .hero-description {
        font-size: 16px;
        line-height: 24px;
    }

    .hero-btn {
        display: flex;
        flex-direction: column;
        gap: 4px;
        background: rgba(15, 23, 50, 0.10);
        backdrop-filter: blur(1px);
        color: #0F172A;
        width: 100px;
        height: auto;
        padding: 16px;
        font-size: 16px;
        text-align: center;
        margin-left: 50px;
    }

    .search-modal {
        padding: 1.5rem;
        border-radius: 20px;
    }

    .icon-search-overlay {
        width: 40px;
    }

    .search-modal__title {
        font-size: 2rem;
    }

    .search-form {
        flex-direction: column;
        gap: 1rem;
    }

    .search-input {
        width: 100%;
        height: 60px;
        padding: 5px;
        font-size: 0.95rem;
    }

    .search-modal__popular {
        margin-bottom: 20px;
    }

    .search-modal__popular-list {
        gap: 10px;
    }

    .articles-title {
        font-size: 30px;
        text-align: center;
    }

    .articles-title::before {
        bottom: -60px;
        width: 60px;
    }

    .articles-grid {
        grid-template-columns: 1fr;
        padding-inline: 10px;
    }

    .article-card {
        width: 100%;
    }

    .article-card__title {
        font-size: 1.4rem;
        line-height: 1.6rem;
    }

    .article-card__author-info {
        flex-direction: column;
        align-items: flex-start;
        gap: 2px;
    }

    .article-card__author-avatar {
        width: 45px;
        height: 45px;
    }
    
    .newsletter .container {
        flex-direction: column;
        text-align: center;
        gap: 2rem;
    }

    .newsletter__content {
        flex-direction: column;
        gap: 1rem;
    }

    .newsletter__text {
        width: 100%;
    }

    .newsletter__label {
        font-size: 32px;
    }

    .newsletter__form {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 12px;
    }

    .newsletter__input {
        width: 100%;
    }
    
    .about .container {
        flex-direction: column-reverse;
        text-align: center;
        gap: 2rem;
        padding: 4rem 20px;
    }

    .about__content {
        align-items: center;
    }

    .about__title {
        font-size: 2rem;
        line-height: 1.8rem;
    }

    .about__description {
        font-size: 1rem;
        line-height: 1.8rem;
    }

    .about__stats {
        width: 100%;
        justify-content: space-around;
        gap: 1rem;
    }

    .about__button {
        width: 100%;
        max-width: 280px;
    }

    .about__image {
        width: 100%;
        height: 320px;
    }

    .footer .container {
        flex-direction: column;
        align-items: center;
        text-align: center;
        gap: 3rem;
        padding: 50px 20px;
    }

    .footer__brand,
    .footer__navigation,
    .footer__categories,
    .footer__popular-posts {
        align-items: center;
        text-align: center;
        width: 100%;
    }

    .footer__logo {
        font-size: 28px;
    }

    .footer__socials {
        justify-content: center;
        flex-wrap: wrap;
    }

    .footer__link::before {
        display: none;
    }

    .footer__link:hover {
        transform: none;
    }

    .footer-post-link {
        justify-content: center;
        flex-direction: column;
    }

    .footer-post__image {
        width: 100%;
        max-width: 200px;
        height: 150px;
    }

    .footer__navigation,
    .footer__categories,
    .footer__popular-posts {
        flex-basis: auto;
    }
    
    
}


@media (max-width: 360px) {

    .header {
        padding: 16px 0;
    }

    .hero-content {
        padding: 12px 0;
    }

    .hero-subtitle {
        font-size: 10px;
    }

    .hero-subtitle::before {
        height: 1px;
    }

    .hero-title {
        font-size: 34px;
        line-height: 38px;
        margin-top: 4px;
    }

    .hero-description {
        width: auto;
        max-width: 280px;
        line-height: 24px;
    }

    .hero-btn {
        flex-direction: row;
        width: 50%;
        align-self: center;
        margin-top: 80px;
        background: inherit;
    }
    
    .icon-search-overlay {
        width: 32px;
    }

    .search-modal__title {
        font-size: 24px;
    }

    .search-form {
        gap: 5px;
    }

    .search-input {
        width: 100%;
    }

    .search-submit {
        position: static;
    }

    .search-modal__hint {
        font-size: 14px;
    }

    .articles-label {
        font-size: 14px;
    }

    .articles-title {
        font-size: 26px;
    }

    .newsletter__label {
        font-size: 26px;
    }

    .newsletter__form {
        align-items: center;
    }

    .newsletter__description {
        font-size: 16px;
    }

    .newsletter__button {
        position: static;
        display: block;
    }

    .about__label {
        font-size: 12px;
    }

    .about__title {
        font-size: 24px;
    }

    .about__description {
        font-size: 14px;
    }

    .about__stat-number {
        font-size: 24px;
    }

    .about__stat-label {
        font-size: 18px;
    }
}
/* ... */

